<resources>
    <string name="app_name" translatable="false">AndroidAcademy</string>
    <string name="hello" translatable="false">Hello World!</string>
    <string name="hello_land_world">Hello Land World</string>
    <string name="hello_world">Hi</string>
    <string name="title_activity_second" translatable="false">SecondActivity</string>
    <string name="title_activity_movie_details" translatable="false">MovieDetailsActivity</string>
    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
    <string name="back">Back</string>
    <string name="storyline">Storyline</string>
    <string name="cast">Cast</string>
    <string name="after_the_devastating_events_of_avengers_infinity_war_the_universe_is_in_ruins_with_the_help_of_remaining_allies_the_avengers_assemble_once_more_in_order_to_reverse_thanos_actions_and_restore_balance_to_the_universe">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
</resources>